--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <header>
         <a href="./index.html"
           >SIMPLY CHOCOLATE<img
-            src="/images/chocolate_icon.svg"
+            src="./images/chocolate_icon.svg"
             alt="chocolate_icon"
         /></a>
         <ul>
