--- a/index.html
+++ b/index.html
@@ -108,293 +108,355 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
-        <p>
+      <section class="taste">
+        <h2 class="title-taste all-title">
+          IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION
+        </h2>
+        <p class="taste-text">
           At Simply Chocolate, we believe that the secret to exceptional
           chocolate is in the details. From the sourcing of the finest
           ingredients to the careful crafting of each individual piece, every
           step of our process adds up to one exceptional taste sensation.
         </p>
-        <ul>
-          <li>
+        <ul class="taste-list">
+          <li class="taste-item">
             <img
               src="./images/Taste/img-1Taste.png"
               alt="MILK CHOCOLATE"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>MILK CHOCOLATE</h3>
+            <h3 class="taste-subtitle">MILK CHOCOLATE</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-2Taste.png"
               alt="MILK"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>MILK</h3>
+            <h3 class="taste-subtitle black-text">MILK</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-3Taste.png"
               alt="NUTS"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>NUTS</h3>
+            <h3 class="taste-subtitle">NUTS</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-4Taste.png"
               alt="SEMI - SWEET CHOCOLATE"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>SEMI - SWEET CHOCOLATE</h3>
+            <h3 class="taste-subtitle black-text">SEMI - SWEET CHOCOLATE</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-5Taste.png"
               alt="CACAO"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>CACAO</h3>
+            <h3 class="taste-subtitle">CACAO</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-6Taste.png"
               alt="RASPBERRY"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>RASPBERRY</h3>
+            <h3 class="taste-subtitle black-text">RASPBERRY</h3>
           </li>
-          <li>
+          <li class="taste-item">
             <img
               src="./images/Taste/img-7Taste.png"
               alt="COCONUT OIL"
               width="214"
               height="160"
+              class="taste-img"
             />
-            <h3>COCONUT OIL</h3>
+            <h3 class="taste-subtitle">COCONUT OIL</h3>
           </li>
         </ul>
       </section>
-      <section id="made">
-        <h2>hOW IT’S made?</h2>
+      <section id="made" class="made">
+        <h2 class="all-title made-title">hOW IT’S <span>made?</span></h2>
         <img
           src="./images/Made/imagemade.jpg"
           alt="liquid chocolate"
           width="600"
           height="400"
+          class="made-img"
         />
-        <h3>
+        <h3 class="made-subtitle">
           Try our chocolates today and discover the perfect balance of flavor
         </h3>
-        <ul>
-          <li>
+        <ul class="made-list">
+          <li class="made-item">
             Heat the milk in a saucepan without bringing it to a boil. Add sugar
             and cocoa powder.
           </li>
-          <li>
+          <li class="made-item">
             At the same time, prepare a water bath. Melt the butter on it.
           </li>
-          <li>
+          <li class="made-item">
             "Mix" the milk mixture and already liquid butter. Mix thoroughly
             with a silicone spatula so that the mass becomes uniform and silky.
           </li>
-          <li>Heat the mixture over low heat, letting it barely boil.</li>
-          <li>
+          <li class="made-item">
+            Heat the mixture over low heat, letting it barely boil.
+          </li>
+          <li class="made-item">
             Pour the chocolate into special containers (can be replaced with ice
             molds). Allow to cool and harden.
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our pRODUCTS</h2>
-        <ul>
-          <li>
+      <section class="products">
+        <h2 class="all-title products-title">Our <span>pRODUCTS</span></h2>
+        <ul class="products-list">
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-1PRODUCTS-min.png"
               alt="Dark chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>orange</h3>
-            <p>Dark chocolate</p>
-            <button type="button">45 UAH</button>
+            <h3 class="products-subtitle">orange</h3>
+            <p class="products-text">Dark chocolate</p>
+            <button class="products-btn" type="button">45 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-2PRODUCTS-min.png"
               alt="Milk chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>APPLE&CRANBERRY</h3>
-            <p>Milk chocolate</p>
-            <button type="button">50 UAH</button>
+            <h3 class="products-subtitle">APPLE&CRANBERRY</h3>
+            <p class="products-text">Milk chocolate</p>
+            <button class="products-btn" type="button">50 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-3PRODUCTS-min.png"
               alt="Dark chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>lime&sea salt</h3>
-            <p>Dark chocolate</p>
-            <button type="button">66 UAH</button>
+            <h3 class="products-subtitle">lime&sea salt</h3>
+            <p class="products-text">Dark chocolate</p>
+            <button class="products-btn" type="button">66 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-4PRODUCTS-min.png"
               alt="Dark chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>pineapple</h3>
-            <p>Dark chocolate</p>
-            <button type="button">54 UAH</button>
+            <h3 class="products-subtitle">pineapple</h3>
+            <p class="products-text">Dark chocolate</p>
+            <button class="products-btn" type="button">54 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-5PRODUCTS-min.png"
               alt="Milk chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>Classic</h3>
-            <p>Milk chocolate</p>
-            <button type="button">45 UAH</button>
+            <h3 class="products-subtitle">Classic</h3>
+            <p class="products-text">Milk chocolate</p>
+            <button class="products-btn" type="button">45 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-6PRODUCTS-min.png"
               alt="Milk chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>honey</h3>
-            <p>Milk chocolate</p>
-            <button type="button">50 UAH</button>
+            <h3 class="products-subtitle">honey</h3>
+            <p class="products-text">Milk chocolate</p>
+            <button class="products-btn" type="button">50 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-7PRODUCTS-min.png"
               alt="Dark chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>Roasted fruits</h3>
-            <p>Dark chocolate</p>
-            <button type="button">66 UAH</button>
+            <h3 class="products-subtitle">Roasted fruits</h3>
+            <p class="products-text">Dark chocolate</p>
+            <button class="products-btn" type="button">66 UAH</button>
           </li>
-          <li>
+          <li class="products-item">
             <img
               src="./images/PRODUCTS/img-8PRODUCTS-min.png"
               alt="White chocolate"
               width="230"
               height="201"
+              class="products-img"
             />
-            <h3>Classic</h3>
-            <p>White chocolate</p>
-            <button type="button">54 UAH</button>
+            <h3 class="products-subtitle">Classic</h3>
+            <p class="products-text">White chocolate</p>
+            <button class="products-btn" type="button">54 UAH</button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>tOp Sellers</h2>
+      <section class="sellers">
+        <h2 class="all-title sellers-title"><span>tOp</span> Sellers</h2>
         <img
           src="./images/Sellers/img-1Sellers.jpg"
           alt="CHOCOLATE WITH NUTS"
           width="368"
           height="464"
+          class="sellers-img"
         />
-        <h3>CHOCOLATE WITH NUTS</h3>
+        <h3 class="sellers-subtitle">CHOCOLATE WITH NUTS</h3>
         <img
           src="./images/Sellers/img-2Sellers.jpg"
           alt="CHOCOLATE WITH FRUITS"
           width="368"
           height="464"
+          class="sellers-img"
         />
-        <h3>CHOCOLATE WITH FRUITS</h3>
+        <h3 class="sellers-subtitle">CHOCOLATE WITH FRUITS</h3>
         <img
           src="./images/Sellers/img-3Sellers.jpg"
           width="368"
           height="464"
           alt="DARK CHOCOLATE"
+          class="sellers-img"
         />
-        <h3>DARK CHOCOLATE</h3>
+        <h3 class="sellers-subtitle">DARK CHOCOLATE</h3>
       </section>
-      <section>
-        <h2>chocolate is loved</h2>
-        <ul>
-          <li>
+      <section class="loved">
+        <h2 class="all-title loved-title"><span>chocolate</span> is loved</h2>
+        <ul class="loved-list">
+          <li class="loved-item">
             <img
               src="./images/review/Ellipsereview.png"
               alt="Victoria Dobrzhanska"
+              class="loved-img"
             />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
+            <h3 class="loved-name">Victoria Dobrzhanska</h3>
+            <p class="loved-text">
               I love this chocolate bar. Perfect combination of light crispy
               wafer, covered in a thin layer chocolate.
             </p>
           </li>
-          <li>
+          <li class="loved-item">
             <img
               src="./images/review/Ellipsereview-1.png"
               alt="Nazar Babenko"
+              class="loved-img"
             />
-            <h3>Nazar Babenko</h3>
-            <p>
+            <h3 class="loved-name">Nazar Babenko</h3>
+            <p class="loved-text">
               This chocolate confection is a delight! A delight! The wafer is
               light and crisp, the hazelnut cream is smooth, and the chocolate
               is good.
             </p>
           </li>
-          <li>
+          <li class="loved-item">
             <img
               src="./images/review/Ellipsereview-2.png"
               alt="Olena Kampusch"
+              class="loved-img"
             />
-            <h3>Olena Kampusch</h3>
-            <p>
+            <h3 class="loved-name">Olena Kampusch</h3>
+            <p class="loved-text">
               Chocolate is a family favourite treat. Love the delicious smooth
               chocolate and the creaminess inside. The wafer is soft but
               crunchy.
             </p>
           </li>
         </ul>
-        <button type="button">Leave a review</button>
+        <button class="loved-btn" type="button">Leave a review</button>
       </section>
     </main>
-    <footer>
-      <p>Chocolate a delicious cure for a bad day</p>
-      <p>Social networks</p>
-      <ul>
-        <li><a href="" target="_blank" rel="noopener noreferrer">Inst</a></li>
-        <li><a href="" target="_blank" rel="noopener noreferrer">FB</a></li>
-        <li><a href="" target="_blank" rel="noopener noreferrer">Twit</a></li>
+    <footer class="footer">
+      <p class="footer-subtitle">
+        <span>Chocolate</span> a delicious cure for a bad day
+      </p>
+      <p class="contact-text">Social networks</p>
+      <ul class="footer-soc-list">
+        <li class="footer-soc-logo">
+          <a
+            class="footer-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >Inst</a
+          >
+        </li>
+        <li class="footer-soc-logo">
+          <a
+            class="footer-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >FB</a
+          >
+        </li>
+        <li class="footer-soc-logo">
+          <a
+            class="footer-soc-link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer"
+            >Twit</a
+          >
+        </li>
       </ul>
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+      <p class="contact-text">Contact us</p>
+      <address class="footer-adress">
+        <ul class="footer-adress-list">
+          <li class="footer-adress-item">
+            <a class="footer-adress-link" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
           </li>
-          <li>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+          <li class="footer-adress-item">
+            <a class="footer-adress-link" href="mailto:simplychoc@gmail.com"
+              >simplychoc@gmail.com</a
+            >
           </li>
         </ul>
       </address>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="#made">How it’s made</a>?</li>
-          <li><a href="">Chocolate is loved</a></li>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item">
+            <a class="footer-nav-link" href="">Home</a>
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-nav-link" href="#made">How it’s made</a>?
+          </li>
+          <li class="footer-nav-item">
+            <a class="footer-nav-link" href="">Chocolate is loved</a>
+          </li>
         </ul>
       </nav>
     </footer>
