--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
       <div class="container container-header">
         <nav class="nav-header">
           <a href="./index.html" class="logo"
-            ><span class="logo-italic">SIMPLY</span> CHOCOLATE<img
-              class="logo-header"
-              src="./images/chocolate_icon.svg"
-              alt="chocolate_icon"
-            />
+            ><span class="logo-italic">SIMPLY</span> CHOCOLATE
+            <svg width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-chocolate"></use>
+            </svg>
           </a>
           <ul class="menu-header-list">
             <li class="menu-header-item">
@@ -39,7 +38,7 @@
               <a class="menu-header-link" href="#made">How it’s made?</a>
             </li>
             <li class="menu-header-item">
-              <a class="menu-header-link" href="">Chocolate is loved</a>
+              <a class="menu-header-link" href=""> Chocolate is loved</a>
             </li>
           </ul>
         </nav>
@@ -50,8 +49,9 @@
               href=""
               target="_blank"
               rel="noopener noreferrer"
-              >Inst</a
-            >
+              ><svg class="svg-header" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use></svg
+            ></a>
           </li>
           <li class="soc-header-item">
             <a
@@ -59,8 +59,9 @@
               href=""
               target="_blank"
               rel="noopener noreferrer"
-              >FB</a
-            >
+              ><svg class="svg-header" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+            ></a>
           </li>
           <li class="soc-header-item">
             <a
@@ -68,8 +69,9 @@
               href=""
               target="_blank"
               rel="noopener noreferrer"
-              >Twit</a
-            >
+              ><svg class="svg-header" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+            ></a>
           </li>
         </ul>
       </div>
@@ -86,7 +88,15 @@
           <div class="hero-btn">
             <button class="hero-button-buy" type="button">Buy now</button>
             <a class="hero-link-nav" href="#made">How it’s made</a>
-            <a class="hero-link-down" href="">scroll down</a>
+            <a class="hero-link-down" href=""
+              >scroll down
+              <div>
+                <svg class="svg-hero" width="22" height="22">
+                  <use
+                    href="./images/symbol-defs.svg#icon-fi-rr-angle-small-left"
+                  ></use>
+                </svg></div
+            ></a>
           </div>
         </div>
       </section>
@@ -96,6 +106,13 @@
           <h2 class="visually-hidden">features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="svg-features">
+                <svg width="32" height="32">
+                  <use
+                    href="./images/symbol-defs.svg#icon-fluent-emoji-high-contrast_chocolate-bar"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">Unsurpassed taste</h3>
               <p class="features-text">
                 Crafted with the finest quality cocoa beans and a dedication to
@@ -105,6 +122,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="svg-features">
+                <svg width="32" height="32">
+                  <use href="./images/symbol-defs.svg#icon-Coin"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Affordable price</h3>
               <p class="features-text">
                 Indulge in high-quality chocolate without breaking the bank with
@@ -115,6 +137,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="svg-features">
+                <svg width="32" height="32">
+                  <use
+                    href="./images/symbol-defs.svg#icon-la_utensil-spoon"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-title">Own production</h3>
               <p class="features-text">
                 We take pride in our own production process, ensuring that every
@@ -362,38 +391,70 @@
       <section class="sellers">
         <div class="container">
           <h2 class="all-title sellers-title"><span>tOp</span> Sellers</h2>
-          <div class="sellers-container">
-            <div class="img-container">
-              <img
-                src="./images/Sellers/img-1Sellers.jpg"
-                alt="CHOCOLATE WITH NUTS"
-                width="368"
-                height="464"
-                class="sellers-img"
-              />
+          <ul class="sellers-container">
+            <li class="img-container">
+              <div class="container-img-sellers">
+                <img
+                  src="./images/Sellers/img-1Sellers.jpg"
+                  alt="CHOCOLATE WITH NUTS"
+                  width="368"
+                  height="464"
+                  class="sellers-img"
+                />
+                <div class="hover-container-sellers">
+                  <p class="hover-sellers-text">
+                    Chocolate with nuts is a delectable combination that brings
+                    together the smoothness of chocolate and the crunchiness of
+                    nuts. Whether it's milk chocolate, dark chocolate, or white
+                    chocolate, the addition of nuts adds a whole new dimension
+                    of flavor and texture.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">CHOCOLATE WITH NUTS</h3>
-            </div>
-            <div class="img-container">
-              <img
-                src="./images/Sellers/img-2Sellers.jpg"
-                alt="CHOCOLATE WITH FRUITS"
-                width="368"
-                height="464"
-                class="sellers-img"
-              />
+            </li>
+            <li class="img-container">
+              <div class="container-img-sellers">
+                <img
+                  src="./images/Sellers/img-2Sellers.jpg"
+                  alt="CHOCOLATE WITH FRUITS"
+                  width="368"
+                  height="464"
+                  class="sellers-img"
+                />
+                <div class="hover-container-sellers">
+                  <p class="hover-sellers-text">
+                    Chocolate with fruit is an unbeatable combination of two of
+                    the tastiest things in the world. This dessert combines
+                    delicate and aromatic chocolate with fresh and juicy fruits,
+                    creating a true poetry of taste.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">CHOCOLATE WITH FRUITS</h3>
-            </div>
-            <div class="img-container">
-              <img
-                src="./images/Sellers/img-3Sellers.jpg"
-                width="368"
-                height="464"
-                alt="DARK CHOCOLATE"
-                class="sellers-img"
-              />
+            </li>
+            <li class="img-container">
+              <div class="container-img-sellers">
+                <img
+                  src="./images/Sellers/img-3Sellers.jpg"
+                  width="368"
+                  height="464"
+                  alt="DARK CHOCOLATE"
+                  class="sellers-img"
+                />
+                <div class="hover-container-sellers">
+                  <p class="hover-sellers-text">
+                    Dark chocolate is a rich and indulgent treat that is beloved
+                    by many chocolate enthusiasts. It is made from cocoa beans,
+                    which are roasted, ground, and then processed to produce
+                    chocolate liquor. Dark chocolate contains a higher
+                    percentage of cocoa solids compared to milk chocolate.
+                  </p>
+                </div>
+              </div>
               <h3 class="sellers-subtitle">DARK CHOCOLATE</h3>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- LOVED SEVENTH SECTION -->
@@ -402,24 +463,28 @@
           <h2 class="all-title loved-title"><span>chocolate</span> is loved</h2>
           <ul class="loved-list">
             <li class="loved-item">
-              <img
-                src="./images/review/Ellipsereview.png"
-                alt="Victoria Dobrzhanska"
-                class="loved-img"
-              />
-              <h3 class="loved-name">Victoria Dobrzhanska</h3>
+              <div class="img-name">
+                <img
+                  src="./images/review/Ellipsereview.png"
+                  alt="Victoria Dobrzhanska"
+                  class="loved-img"
+                />
+                <h3 class="loved-name">Victoria Dobrzhanska</h3>
+              </div>
               <p class="loved-text">
                 I love this chocolate bar. Perfect combination of light crispy
                 wafer, covered in a thin layer chocolate.
               </p>
             </li>
             <li class="loved-item">
-              <img
-                src="./images/review/Ellipsereview-1.png"
-                alt="Nazar Babenko"
-                class="loved-img"
-              />
-              <h3 class="loved-name">Nazar Babenko</h3>
+              <div class="img-name">
+                <img
+                  src="./images/review/Ellipsereview-1.png"
+                  alt="Nazar Babenko"
+                  class="loved-img"
+                />
+                <h3 class="loved-name">Nazar Babenko</h3>
+              </div>
               <p class="loved-text">
                 This chocolate confection is a delight! A delight! The wafer is
                 light and crisp, the hazelnut cream is smooth, and the chocolate
@@ -427,12 +492,14 @@
               </p>
             </li>
             <li class="loved-item">
-              <img
-                src="./images/review/Ellipsereview-2.png"
-                alt="Olena Kampusch"
-                class="loved-img"
-              />
-              <h3 class="loved-name">Olena Kampusch</h3>
+              <div class="img-name">
+                <img
+                  src="./images/review/Ellipsereview-2.png"
+                  alt="Olena Kampusch"
+                  class="loved-img"
+                />
+                <h3 class="loved-name">Olena Kampusch</h3>
+              </div>
               <p class="loved-text">
                 Chocolate is a family favourite treat. Love the delicious smooth
                 chocolate and the creaminess inside. The wafer is soft but
@@ -446,67 +513,97 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <p class="footer-subtitle">
-        <span>Chocolate</span> a delicious cure for a bad day
-      </p>
-      <p class="contact-text">Social networks</p>
-      <ul class="footer-soc-list">
-        <li class="footer-soc-logo">
-          <a
-            class="footer-soc-link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            >Inst</a
-          >
-        </li>
-        <li class="footer-soc-logo">
-          <a
-            class="footer-soc-link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            >FB</a
-          >
-        </li>
-        <li class="footer-soc-logo">
-          <a
-            class="footer-soc-link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            >Twit</a
-          >
-        </li>
-      </ul>
-      <p class="contact-text">Contact us</p>
-      <address class="footer-adress">
-        <ul class="footer-adress-list">
-          <li class="footer-adress-item">
-            <a class="footer-adress-link" href="tel:+380684439426"
-              >+380 (68) 443-94-26</a
-            >
-          </li>
-          <li class="footer-adress-item">
-            <a class="footer-adress-link" href="mailto:simplychoc@gmail.com"
-              >simplychoc@gmail.com</a
-            >
-          </li>
-        </ul>
-      </address>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="">Home</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="#made">How it’s made</a>?
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="">Chocolate is loved</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="up-footer">
+        <p class="footer-subtitle">
+          <span>Chocolate</span> a delicious cure for a bad day
+        </p>
+        <div class="soc-right-box">
+          <div class="footer-social-networks">
+            <p class="contact-text">Social networks</p>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-logo">
+                <a
+                  class="footer-soc-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><svg class="svg-soc" width="24" height="24">
+                    <use
+                      href="./images/symbol-defs.svg#icon-instagram"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-logo">
+                <a
+                  class="footer-soc-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><svg class="svg-soc" width="24" height="24">
+                    <use
+                      href="./images/symbol-defs.svg#icon-facebook"
+                    ></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-logo">
+                <a
+                  class="footer-soc-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><svg class="svg-soc" width="24" height="24">
+                    <use
+                      href="./images/symbol-defs.svg#icon-twitter"
+                    ></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact-container">
+            <p class="contact-text">Contact us</p>
+            <address class="footer-adress">
+              <ul class="footer-adress-list">
+                <li class="footer-adress-item">
+                  <a class="footer-adress-link" href="tel:+380684439426"
+                    >+380 (68) 443-94-26</a
+                  >
+                </li>
+                <li class="footer-adress-item">
+                  <a
+                    class="footer-adress-link"
+                    href="mailto:simplychoc@gmail.com"
+                    >simplychoc@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+      </div>
+      <div class="bt-footer">
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="">Home</a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="#made">How it’s made</a>?
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="input-btn">
+          <input
+            name="footer-email"
+            class="input-mail"
+            type="email"
+            placeholder="Enter your email"
+          />
+          <button type="submit" class="button-subs">Subscribe</button>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
