--- a/index.html
+++ b/index.html
@@ -468,13 +468,15 @@
                   src="./images/review/Ellipsereview.png"
                   alt="Victoria Dobrzhanska"
                   class="loved-img"
+                  width="80"
+                  height="80"
                 />
                 <h3 class="loved-name">Victoria Dobrzhanska</h3>
+                <p class="loved-text">
+                  I love this chocolate bar. Perfect combination of light crispy
+                  wafer, covered in a thin layer chocolate.
+                </p>
               </div>
-              <p class="loved-text">
-                I love this chocolate bar. Perfect combination of light crispy
-                wafer, covered in a thin layer chocolate.
-              </p>
             </li>
             <li class="loved-item">
               <div class="img-name">
@@ -482,14 +484,16 @@
                   src="./images/review/Ellipsereview-1.png"
                   alt="Nazar Babenko"
                   class="loved-img"
+                  width="80"
+                  height="80"
                 />
                 <h3 class="loved-name">Nazar Babenko</h3>
+                <p class="loved-text">
+                  This chocolate confection is a delight! A delight! The wafer
+                  is light and crisp, the hazelnut cream is smooth, and the
+                  chocolate is good.
+                </p>
               </div>
-              <p class="loved-text">
-                This chocolate confection is a delight! A delight! The wafer is
-                light and crisp, the hazelnut cream is smooth, and the chocolate
-                is good.
-              </p>
             </li>
             <li class="loved-item">
               <div class="img-name">
@@ -497,14 +501,16 @@
                   src="./images/review/Ellipsereview-2.png"
                   alt="Olena Kampusch"
                   class="loved-img"
+                  width="80"
+                  height="80"
                 />
                 <h3 class="loved-name">Olena Kampusch</h3>
+                <p class="loved-text">
+                  Chocolate is a family favourite treat. Love the delicious
+                  smooth chocolate and the creaminess inside. The wafer is soft
+                  but crunchy.
+                </p>
               </div>
-              <p class="loved-text">
-                Chocolate is a family favourite treat. Love the delicious smooth
-                chocolate and the creaminess inside. The wafer is soft but
-                crunchy.
-              </p>
             </li>
           </ul>
           <button class="loved-btn" type="button">Leave a review</button>
