--- a/index.html
+++ b/index.html
@@ -519,11 +519,12 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="up-footer">
-        <p class="footer-subtitle">
-          <span>Chocolate</span> a delicious cure for a bad day
-        </p>
-        <div class="soc-right-box">
+      <div class="container">
+        <div class="up-footer">
+          <p class="footer-subtitle">
+            <span>Chocolate</span> a delicious cure for a bad day
+          </p>
+          <!-- <div class="soc-right-box"> -->
           <div class="footer-social-networks">
             <p class="contact-text">Social networks</p>
             <ul class="footer-soc-list">
@@ -584,30 +585,31 @@
               </ul>
             </address>
           </div>
+          <!-- </div> -->
         </div>
-      </div>
-      <div class="bt-footer">
-        <nav class="footer-nav">
-          <ul class="footer-nav-list">
-            <li class="footer-nav-item">
-              <a class="footer-nav-link" href="">Home</a>
-            </li>
-            <li class="footer-nav-item">
-              <a class="footer-nav-link" href="#made">How it’s made</a>?
-            </li>
-            <li class="footer-nav-item">
-              <a class="footer-nav-link" href="">Chocolate is loved</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="input-btn">
-          <input
-            name="footer-email"
-            class="input-mail"
-            type="email"
-            placeholder="Enter your email"
-          />
-          <button type="submit" class="button-subs">Subscribe</button>
+        <div class="bt-footer">
+          <nav class="footer-nav">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item">
+                <a class="footer-nav-link" href="">Home</a>
+              </li>
+              <li class="footer-nav-item">
+                <a class="footer-nav-link" href="#made">How it’s made</a>?
+              </li>
+              <li class="footer-nav-item">
+                <a class="footer-nav-link" href="">Chocolate is loved</a>
+              </li>
+            </ul>
+          </nav>
+          <form class="footer-form">
+            <input
+              name="footer-email"
+              class="input-mail"
+              type="email"
+              placeholder="Enter your email"
+            />
+            <button type="submit" class="button-subs">Subscribe</button>
+          </form>
         </div>
       </div>
     </footer>
