--- a/index.html
+++ b/index.html
@@ -613,5 +613,95 @@
         </div>
       </div>
     </footer>
+    <div class="is-open container-page-form">
+      <div class="container-form">
+        <button class="btn-close" type="button">
+          <svg class="close-icons" width="28" height="28">
+            <use href="./images/symbol-defs.svg#icon-x-close"></use>
+          </svg>
+        </button>
+        <p class="subtitle-form">
+          LEAVE A REVIEW ABOUT
+          <span class="subtitle-form-span">OUR CHOCOLATE</span>
+        </p>
+        <form class="modal-form">
+          <div class="input-container">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="container-form-svg">
+              <input
+                class="input-form"
+                required
+                name="user-name"
+                id="user-name"
+                type="text"
+              />
+              <svg class="icons-form" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-userform1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-container">
+            <label for="user-mail" class="modal-label">Email</label>
+            <div class="container-form-svg">
+              <input
+                class="input-form"
+                required
+                name="user-mail"
+                id="user-mail"
+                type="email"
+              />
+              <svg class="icons-form" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-container">
+            <label for="user-phone" class="modal-label">Phone number</label>
+            <div class="container-form-svg">
+              <input
+                class="input-form"
+                required
+                name="user-phone"
+                id="user-phone"
+                type="tel"
+              />
+              <svg class="icons-form" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-phoneform1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-container">
+            <label for="user-comment" class="comment-label">Comment</label
+            ><textarea
+              class="comment-area"
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="Enter text"
+            ></textarea>
+          </div>
+          <div class="input-container">
+            <input
+              type="checkbox"
+              id="policy"
+              name="policy"
+              value="true"
+              class="check-input visually-hidden"
+            />
+            <label for="policy" class="check-text">
+              <span>
+                <svg class="check-icon" width="10" height="10">
+                  <use href="./images/symbol-defs.svg#icon-icon"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-policy" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
